# customfunctions

./: README.md  config.toml  pyproject.toml  requirements.txt  settings.ini  setup.py  snowflake.yml
.github/: deploy_snowpark.yaml
customfunctions/: _modidx.py  common.py  connection.py  functions.py  procedures.py
customfunctions/files/: config.yaml  perform_aggregation.sql  perform_aggregation_config.sql
customfunctions/test/: conftest.py  test_common.py  test_procedures.py
dev/: development.ipynb
nbs/: 00_connection.ipynb  01_common.ipynb  02_functions.ipynb  03_procedures.ipynb  customfunctions  index.ipynb  nbdev.yml
